Fold spike #6 findings into the technical spec
meshoptimizer via LWJGL verified end to end on Java 25. Corrections:

- deps.edn needs artifact$classifier syntax, not a :classifier key, and
  core lwjgl natives alongside the module's
- Java 25 requires --enable-native-access and --sun-misc-unsafe-memory-access
- use meshopt_simplifyWithAttributes (weight 0.5) since we carry normals
- Windows CI is only needed to run tests, not to build: natives are
  prebuilt jars, so Linux can package the Windows classifier

Adds §6.6 interop notes. Flags an unresolved risk: crease-splitting before
simplification may prevent collapses across hard edges, which would defeat
LOD generation. Wire format §6.4 provisional pending that measurement.

Co-Authored-By: Claude Opus 5 <noreply@anthropic.com>
Claude-Session: https://claude.ai/code/session_01L4V1KDzu2YpG98iPP6cXbB